<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.EditProfileSecurityFragment"
    android:padding="@dimen/padding_24dp">


    <TextView
        android:id="@+id/account_tap_to_change_picture_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_security_verified_information"
        android:textColor="@color/navy_blue"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/text_size_11sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_39dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/security_phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragement_security_phone_number"
        android:textColor="@color/navy_blue"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_tap_to_change_picture_text_view"/>

    <EditText
        android:id="@+id/security_phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:hint="07000000000"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/text_size_13sp"
        app:layout_constraintTop_toBottomOf="@+id/security_phone_text_view"/>

    <TextView
        android:id="@+id/security_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_password"
        android:textColor="@color/navy_blue"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/text_size_11sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_phone_edit_text"/>


    <TextView
        android:id="@+id/security_change_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_security_change_password"
        android:textColor="@color/navy_blue"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/margin_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_password_text_view"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/security_change_password_text_view"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/security_old_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_27dp"
            android:background="@color/white"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/fragment_security_old_password"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_gender_text_view" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/security_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:backgroundTint="@color/white"
            android:hint="@string/all_new_password"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security_old_password_edit_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/security_save_change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/deep_sky_blue"
        android:text="@string/save_change"
        android:fontFamily="@font/poppins_light"
        android:layout_marginTop="@dimen/margin_38dp"
        android:paddingHorizontal="@dimen/padding_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>




</androidx.constraintlayout.widget.ConstraintLayout>